Migración completa a base de datos Room (cambio completo de base de datos) :)